package simulation

import (
    "fmt"
)

type Simulation struct {
    drones    []*SurveillanceDrone
    crowd     []*CrowdMember
    // Add fields for performance metrics and system parameters
}

func NewSimulation() *Simulation {
    return &Simulation{
        drones: []*SurveillanceDrone{},
        crowd:  []*CrowdMember{},
    }
}

func (s *Simulation) StartSimulation() {
    fmt.Println("Simulation started")
    // Logic to initialize and run the simulation
}
